Updated some requests
